<resources>
    <string name="s_app_name">行者</string>
    <string name="s_speed">时速(km/h)</string>
    <string name="s_mileage">里程(km)</string>
    <string name="s_time">运动时间</string>
    <string name="s_start">开始</string>
    <string name="s_auto_pause">自动暂停</string>
    <string name="s_real_time_sport_too_short">由于本次运动过短,将不会被记录,确定结束本次运动吗？</string>
    <string name="s_real_time_sport_ensure">确认</string>
    <string name="s_real_time_sport_cancel">取消</string>
    <string name="s_real_time_init_speed">0.00</string>
    <string name="s_real_time_init_mileage">0.00</string>
    <string name="s_real_time_init_time">00:00:00</string>

    <string name="s_sport_mileage">%1$d月 里程(km)</string>
    <string name="s_sport_time">时间</string>
    <string name="s_sport_count">次数</string>
    <string name="s_sport_hort">热度</string>
    <string name="s_sport_date">%1$s-%2$s-%3$s %4$s %5$s</string>
    <string name="s_kilometer">公里</string>
    <string name="s_centigrade">℃</string>
    <string name="s_morning">上午</string>
    <string name="s_noon">中午</string>
    <string name="s_afternoon">下午</string>
    <string name="s_night">晚上</string>
    <string name="s_before_dawn">凌晨</string>
    <!--详情页-->
    <string name="s_trajectory_detail_title">轨迹详情</string>
    <string name="s_trajectory_detail_climb">爬升</string>
    <string name="s_trajectory_detail_km">km</string>
    <string name="s_trajectory_detail_m">m</string>
    <string name="s_trajectory_detail_time">时间</string>
    <string name="s_trajectory_detail_mileage">里程</string>
    <string name="s_trajectory_detail_speed">均速</string>
    <string name="s_trajectory_detail_km_h">km/h</string>
    <string name="s_trajectory_detail_centigrade">℃</string>

    <string name="s_home_club">俱乐部</string>
    <string name="s_home_heat_currency">热力币</string>
    <string name="s_home_integral">积分</string>
    <string name="s_home_bind_phone">为了您的账号安全，请点此绑定手机号</string>
    <string name="s_home_filter_month">%1$d月</string>
    <string name="s_home_sport_type_bike">骑行</string>
    <string name="s_home_sport_type_run">跑步</string>
    <string name="s_home_sport_type_foot">徒步</string>
    <string name="s_home_sport_rank">本地排名</string>
    <string name="s_home_sport_time_default">00:00</string>
    <string name="s_home_sport_heat">%1$d/100℃</string>
    <string name="s_home_sport_history">运动记录</string>
    <string name="s_home_sport_total_mileage">%1$sKm</string>
    <string name="s_home_sport_medal">我的勋章</string>
    <string name="s_home_smart_device">智能设备</string>
    <string name="s_home_sport_number">行者号</string>

    <string name="s_screen_open_app">双击打开行者App</string>
</resources>
