<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.xu.commonlib.widget.CustomToolbar
            app:barTitle="@string/s_trajectory_detail_title"
            android:id="@+id/ctb_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_1"
                android:text="@string/s_trajectory_detail_climb"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_climb"/>


        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_guideline2"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_guideline3"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33"/>

        <TextView
                android:text="@string/res_default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_climb"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"
                tools:text="22.25"
                app:layout_constraintStart_toEndOf="@+id/tv_1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/s_textview10"
                app:layout_constraintTop_toTopOf="@+id/tv_1"/>

        <TextView
                android:text="@string/s_trajectory_detail_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/s_guideline3"
                android:id="@+id/s_textview10"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"
                app:layout_constraintStart_toEndOf="@+id/tv_climb"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@+id/tv_1"/>

        <TextView
                android:text="@string/s_trajectory_detail_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_textview12"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_1"
                app:layout_constraintStart_toStartOf="@+id/tv_1"
                app:layout_constraintEnd_toEndOf="@+id/tv_1"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:text="@string/res_default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mileage_name"
                app:layout_constraintStart_toEndOf="@+id/s_textview12"
                app:layout_constraintTop_toTopOf="@+id/s_textview12"
                app:layout_constraintBottom_toBottomOf="@+id/s_textview12"
                tools:text="55.44"/>

        <TextView
                android:text="@string/s_trajectory_detail_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_textview15"
                app:layout_constraintStart_toEndOf="@+id/tv_mileage_name"
                app:layout_constraintTop_toTopOf="@+id/s_textview12"
                app:layout_constraintBottom_toBottomOf="@+id/s_textview12"
                />

        <TextView
                android:text="@string/s_trajectory_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_textview16"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/s_guideline3"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_textview10"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_time"
                app:layout_constraintTop_toTopOf="@+id/tv_1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"/>

        <TextView
                android:text="@string/res_default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_time"
                app:layout_constraintStart_toEndOf="@+id/s_textview16"
                app:layout_constraintTop_toTopOf="@+id/tv_1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"
                tools:text="2:11:565"
                app:layout_constraintEnd_toStartOf="@+id/s_guideline2"
                />

        <TextView
                android:text="@string/s_trajectory_detail_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_textview18"
                app:layout_constraintStart_toStartOf="@+id/s_textview16"
                app:layout_constraintEnd_toStartOf="@+id/tv_time"
                app:layout_constraintTop_toTopOf="@+id/s_textview12"
                app:layout_constraintBottom_toBottomOf="@+id/s_textview12"
                />

        <TextView
                android:text="@string/res_default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_speed"
                app:layout_constraintStart_toEndOf="@+id/s_textview18"
                app:layout_constraintTop_toTopOf="@+id/tv_mileage_name"
                app:layout_constraintBottom_toBottomOf="@+id/tv_mileage_name"
                />

        <TextView
                android:text="@string/s_trajectory_detail_km_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/s_textview20"
                app:layout_constraintStart_toEndOf="@+id/tv_speed"
                app:layout_constraintTop_toTopOf="@+id/tv_mileage_name"
                app:layout_constraintBottom_toBottomOf="@+id/tv_mileage_name"
                />

        <TextView
                android:text="@string/res_default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:id="@+id/tv_heat"
                android:textColor="@color/s_color_red"
                app:layout_constraintStart_toStartOf="@+id/s_guideline2"
                app:layout_constraintStart_toEndOf="@+id/s_guideline3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/s_textview22"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/s_textview12"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"
                android:textSize="28sp"
                tools:text="48"/>

        <TextView
                android:text="@string/s_trajectory_detail_centigrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/s_color_red"
                android:id="@+id/s_textview22"
                app:layout_constraintStart_toEndOf="@+id/tv_heat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_heat"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.amap.api.maps.MapView
            android:id="@+id/mv_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ctb_detail"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_detail"/>
</androidx.constraintlayout.widget.ConstraintLayout>
