<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_textview8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/s_textview"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            tools:text="7月 里程(km)"
            android:text="@string/s_sport_mileage"/>

    <TextView
            android:text="@string/s_sport_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_textview"
            app:layout_constraintStart_toEndOf="@+id/s_textview8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/s_textview3"
            app:layout_constraintTop_toTopOf="@+id/s_textview8"
            app:layout_constraintBottom_toBottomOf="@+id/s_textview8"/>

    <TextView
            android:text="@string/s_sport_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_textview3"
            app:layout_constraintStart_toEndOf="@+id/s_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/s_textview4"
            app:layout_constraintTop_toTopOf="@+id/s_textview"
            app:layout_constraintBottom_toBottomOf="@+id/s_textview"/>

    <TextView
            android:text="@string/s_sport_hort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s_textview4"
            app:layout_constraintStart_toEndOf="@+id/s_textview3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/s_textview3"
            app:layout_constraintBottom_toBottomOf="@+id/s_textview3"/>

    <TextView
            android:text="@string/res_default_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mileage"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/s_textview8"
            app:layout_constraintStart_toStartOf="@+id/s_textview8"
            app:layout_constraintEnd_toEndOf="@+id/s_textview8"
            tools:text="88.88"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="@string/res_default_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sport_duration"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/s_textview"
            app:layout_constraintStart_toStartOf="@+id/s_textview"
            app:layout_constraintEnd_toEndOf="@+id/s_textview"
            tools:text="88:59:59"/>

    <TextView
            android:text="@string/res_default_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sport_count"
            app:layout_constraintStart_toStartOf="@+id/s_textview3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/s_textview3"
            app:layout_constraintEnd_toEndOf="@+id/s_textview3"
            tools:text="88"/>

    <TextView
            android:text="@string/res_default_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sport_hort"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/s_textview4"
            app:layout_constraintStart_toStartOf="@+id/s_textview4"
            app:layout_constraintEnd_toEndOf="@+id/s_textview4"
            tools:text="888"/>
</androidx.constraintlayout.widget.ConstraintLayout>